--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/tv_date_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@android:color/black"
+                android:textColor="@color/teal_200"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -56,6 +56,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="70sp"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_date_time"
                 tools:text="33" />
@@ -65,6 +66,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/tag_celcius"
                 android:textSize="35sp"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toEndOf="@id/tv_temperature"
                 app:layout_constraintTop_toTopOf="@id/tv_temperature" />
 
@@ -73,6 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_temperature"
                 tools:text="Dhaka, BD" />
@@ -82,7 +85,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent=".7" />
+                app:layout_constraintGuide_begin="266dp" />
 
             <ImageView
                 android:id="@+id/iv_weather_condition"
@@ -93,13 +96,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline"
                 app:layout_constraintTop_toTopOf="@id/tv_temperature"
-                tools:src="@drawable/haze" />
+                tools:src="@drawable/haze"
+                app:tint="@color/teal_200" />
 
             <TextView
                 android:id="@+id/tv_weather_condition"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:textColor="@color/teal_200"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/guideline"
                 app:layout_constraintTop_toBottomOf="@id/iv_weather_condition"
@@ -126,6 +131,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/humidity"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -133,6 +139,7 @@
                 android:id="@+id/tv_humidity_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toEndOf="@id/guideline_value_start"
                 app:layout_constraintTop_toTopOf="@+id/tv_humidity_label"
                 tools:text="70%" />
@@ -143,6 +150,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:text="@string/pressure"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_humidity_label" />
 
@@ -150,6 +158,7 @@
                 android:id="@+id/tv_pressure_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/teal_200"
                 app:layout_constraintStart_toStartOf="@id/guideline_value_start"
                 app:layout_constraintTop_toTopOf="@+id/tv_pressure_label"
                 tools:text="1001 mBar" />
@@ -159,6 +168,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
+                android:textColor="@color/teal_200"
                 android:text="@string/visibility"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_pressure_label" />
@@ -176,6 +186,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_sunrise"
+                android:textColor="@color/teal_200"
                 app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                 app:layout_constraintStart_toStartOf="@id/iv_sunrise"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -197,7 +208,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/teal_200"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/iv_sunrise"
                 app:layout_constraintStart_toStartOf="@id/iv_sunrise"
@@ -209,6 +220,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_sunset"
+                android:textColor="@color/teal_200"
                 app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                 app:layout_constraintStart_toStartOf="@id/iv_sunset"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -229,7 +241,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:textColor="@android:color/black"
+                android:textColor="@color/teal_200"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="@id/iv_sunset"
                 app:layout_constraintStart_toStartOf="@id/iv_sunset"
@@ -257,6 +269,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:visibility="gone"
+            android:textColor="@color/teal_200"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Try Again"
